# SFMLEngine

./: .gitignore  CMakeLists.txt  main.cpp
depreciated/: Game.h
headers/: Game.h  aircraft.h  application.h  command.h  command_queue.h  entity.h  player.h  resource_holder.h  scene_node.h  sprite_node.h  texture_holder.h  textures.h  utility.h  world.h
headers/commands/: command.h
headers/gui/: button.h  component.h  container.h  label.h
headers/resources/: textures.h
headers/scene/: aircraft.h  scene_node.h  sprite_node.h  world.h
headers/states/: menu_state.h  pause_state.h  state.h  state_identifiers.h  state_stack.h
src/: Game.cpp  aircraft.cpp  application.cpp  command.cpp  command_queue.cpp  entity.cpp  player.cpp  scene_node.cpp  sprite_node.cpp  texture_holder.cpp  utility.cpp  world.cpp
src/gui/: button.cpp  label.cpp
src/states/: game_state.cpp  loading_state.cpp  loading_task.cpp  menu_state.cpp  pause_state.cpp  settings_state.cpp  state_stack.cpp  title_state.cpp
